--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Hello Whale</title>
+  <title>Hello Baby</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h1 style="color:red"><b>Hello Kubernetes Fans!</b></h1>
-        <img src="images/docker.png"
+        <img src="images/mybaby_0.jpg"
         <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
       </div>
     </div>
