--- a/html/index.html
+++ b/html/index.html
@@ -34,9 +34,9 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h1 style="color:red><b>Hello Kubernetes Fans!!</b></h1>
+        <h1 style="color:red><b>Hello Kubernetes Fans!!"</b></h1>
         <img src="./images/mybaby_1.jpg"
-        <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
+        <p>This pages is served  from <strong>docker</strong> container running Nginx.</p>
       </div>
     </div>
   </div>
