--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h1 style="color:red><b>Hello Kubernetes Fans!!"</b></h1>
-        <img src="./images/mybaby_1.jpg"
+        <img src="./images/mybaby_2.jpg"
         <p>This pages is served  from <strong>docker</strong> container running Nginx.</p>
       </div>
     </div>
